<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/button_background"
    tools:context="com.example.varun.calculator.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/title"
        android:id="@+id/header"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textColor="#006669"
        android:textColorHighlight="#00FFFF"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:hint="@string/first_number"
        android:ems="10"
        android:id="@+id/first"
        android:layout_marginTop="30dp"
        android:layout_below="@+id/header"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/answer_logo"
        android:id="@+id/answer_logo"
        android:layout_below="@+id/second"
        android:layout_marginTop="90dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:hint="@string/second_number"
        android:ems="10"
        android:id="@+id/second"
        android:layout_below="@+id/linearLayout"
        android:layout_marginTop="15dp"
        android:layout_alignLeft="@+id/first"
        android:layout_alignStart="@+id/first" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/first"
        android:layout_marginTop="15dp"
        android:layout_centerHorizontal="true"
        android:id="@+id/linearLayout"
        android:weightSum="4">

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/plus"
            android:src="@drawable/plus"
            android:layout_weight="1"
            android:background="@color/button_background"
            android:onClick="plus"
            android:contentDescription="plus" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/minus"
            android:layout_weight="1"
            android:background="@color/button_background"
            android:src="@drawable/minus"
            android:onClick="minus"
            android:contentDescription="minus" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/divide"
            android:layout_weight="1"
            android:background="@color/button_background"
            android:src="@drawable/divide"
            android:onClick="divide"
            android:contentDescription="divide" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/multiply"
            android:layout_weight="1"
            android:background="@color/button_background"
            android:src="@drawable/multiply"
            android:onClick="multiply"
            android:contentDescription="multiply" />

    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/credits_button"
        android:id="@+id/credits"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:onClick="credit"
        android:backgroundTint="@color/button"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/answer"
        android:layout_below="@+id/second"
        android:layout_marginTop="90dp"
        android:layout_toRightOf="@+id/equals"
        android:layout_marginLeft="20dp"
        android:hint="@string/initial_answer"
        android:textColor="@color/colorAccent"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/equals"
        android:layout_below="@+id/second"
        android:layout_marginTop="78dp"
        android:layout_toRightOf="@+id/answer_logo"
        android:layout_marginLeft="20dp"
        android:src="@drawable/equals"
        android:contentDescription="equals" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="exit"
        android:id="@+id/exit"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:onClick="exit"
        android:backgroundTint="@color/button"/>

</RelativeLayout>
